--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Restfolio | Restaurant Website Template</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Oswald:wght@200..700&family=Pacifico&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
-  
+
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
